// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CallToAction /> should render correctly with button 1`] = `
<div
  className="call-to-action"
>
  <div
    className="placeholder"
  >
    <h2>
      Every Vote Count
    </h2>
    <h4>
      Vote and Be Voted for
    </h4>
    <a
      className="default-button"
      href="login"
    >
      Register Today
    </a>
  </div>
</div>
`;

exports[`<CallToAction /> should render correctly without button 1`] = `
<div
  className="call-to-action"
>
  <div
    className="placeholder"
  >
    <h2>
      Every Vote Count
    </h2>
    <h4>
      Vote and Be Voted for
    </h4>
  </div>
</div>
`;
